# tcc-win11

./: Cargo.toml  LICENSE  README.md
bindings/: app.manifest  build.rs
sample/: config_sample1.txt  config_sample2.txt  config_sample3.txt  config_sample4.txt
src/: main.rs
