[package]
name = "tcc-win11"
version = "0.1.0"
edition = "2021"
build = "bindings/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.26"
chrono-tz = "0.8.2"
once_cell = "1.18.0"
regex = "1.8.4"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.97"
thiserror = "1.0.40"
wmi = "0.13.1"
winreg = "0.50.0"
winput = "0.2.5"

[build-dependencies]
embed-manifest = "1.4.0"

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_Devices_Display",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Performance",
    "Win32_System_ProcessStatus",
]
